bump version, remove resource file which is included in the mvn dependency, rework from reviews and finalize Emulated EM with BAD support
Signed-off-by: Raphael Mack <ramack@raphael-mack.de>